--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,34 @@
 body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
     background-color: #f8f8f8;
+}
+
+.container {
+    width: 1370px;
+    margin: 0 auto;
+}
+
+.header {
+    min-height: 150px;
+    padding: 0 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-image: url(../images/header-bg.jpg);
 }
 
 .menu {
     list-style-type: none;
+    margin: 0 0 0 0;
+}
+
+.menu-item {
+    float: left;
+}
+
+.menu-item:not(:nth-child(3)) {
+    margin: 0 30px 0 0;
 }
 
 .menu-link {
@@ -18,8 +43,55 @@ body {
     color: #955C47;
 }
 
+.menu:after {
+    content: " ";
+    display: table;
+    clear: both;
+}
+
+/*===Catalog===*/
+
+.catalog-wrp {
+    width: 750px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.catalog-title {
+    width: 100%;
+    text-align: center;
+}
+
+.product {
+    margin: 0 0 50px 0;
+}
+
+.product:nth-child(n+5) {
+    margin: 0;
+}
+
+.product-link {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    color: #2B150D;
+}
+
+.product-link:after {
+    content: " >>";
+}
+
+.product-link:hover {
+    font-weight: bold;
+}
+
+/*===Product===*/
+
 .product-img {
     outline: 4px solid #A9A9A9;
+    float: left;
 }
 
 .product-img:hover {
@@ -40,6 +112,43 @@ body {
     line-height: 16px;
 }
 
+.shot-desc-wrp {
+    margin: 0 0 0 220px;
+}
+
+.shot-desc-wrp:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.product-btn {
+    width: 150px;
+    min-height: 50px;
+    background-color: #ccc;
+    font-size: 18px;
+    font-weight: 900;
+    color: #2B150D;
+    letter-spacing: 2px;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    float: right;
+    outline: none;
+    cursor: pointer;
+}
+
+.product-btn:hover {
+    background-color: #2B150D;
+    color: #ccc;
+    border: 3px solid #2B150D;
+}
+
+.product-btn:active {
+    background-color: #ccc;
+    color: #2B150D;
+    border: 1px solid #fff;
+}
+
 .full-desc {
     color: #484343;
     font-size: 16px;
@@ -54,6 +163,8 @@ body {
     font-weight: bold;
     color: #471515;
 }
+
+/*===Contacts===*/
 
 input[type="text"],
 input[type="email"] {
@@ -103,5 +214,11 @@ tr:nth-child(3) {
 }
 
 .footer {
+    height: 50px;
     background-color: #a1a1a1;
+}
+
+.copyright {
+    float: right;
+    margin: 15px 20px 0 0;
 }
